--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
       <ion-icon name="people"></ion-icon>
     </header>
     <main class="main">
-      <div class="message movement"><p class="time">(09:21:45)</p><p class="name">João</p>entra na sala...</div>
-      <div class="message "><p class="time">(09:22:28)</p> <p class="name">João</p>para<p class="name">Todos</p>: Bom dia</div>
-      <div class="message "><p class="time">(09:22:38)</p> <p class="name">Maria</p>para<p class="name">João</p>: Oi João :)</div>
-      <div class="message private"><p class="time">(09:22:48)</p> <p class="name">João</p> reservadamente para <p class="name">Maria</p>: Oi gatinha quer tc?</div>
-      <div class="message movement"><p class="time">(09:22:58)</p> <p class="name">Maria</p> sai da sala...</div>
-      
+      <div class="message movement"><p><time class="time">(09:21:45) </time><span class="name">João</span> entrou na sala...</p></div>
+      <div class="message "><p><time class="time">(09:22:28) </time><span class="name"> João </span>para<span class="name"> Todos</span>: <span class="content">Bom dia</span></p></div>
+      <div class="message private"><p><span class="time">(09:22:48) </span><span class="name">João</span> reservadamente para <span class="name">Maria</span>: <span class="content">asdiiasudhuiasdiuodhashdsauih</span></p> </div>
+      <div class="message movement"><p><time class="time">(09:22:58) </time><span class="name">Maria</span> saiu da sala...</p></div>
     </main>
     <footer class="footer">
       <input class="input" placeholder="Escreva aqui..."/>
