username and sending messages implemented

--- a/index.html
+++ b/index.html
@@ -16,14 +16,10 @@
       <ion-icon name="people"></ion-icon>
     </header>
     <main class="main">
-      <div class="message movement"><p><time class="time">(09:21:45) </time><span class="name">João</span> entrou na sala...</p></div>
-      <div class="message "><p><time class="time">(09:22:28) </time><span class="name"> João </span>para<span class="name"> Todos</span>: <span class="content">Bom dia</span></p></div>
-      <div class="message private"><p><span class="time">(09:22:48) </span><span class="name">João</span> reservadamente para <span class="name">Maria</span>: <span class="content">asdiiasudhuiasdiuodhashdsauih</span></p> </div>
-      <div class="message movement"><p><time class="time">(09:22:58) </time><span class="name">Maria</span> saiu da sala...</p></div>
     </main>
     <footer class="footer">
       <input class="input" placeholder="Escreva aqui..."/>
-      <ion-icon name="paper-plane-outline"></ion-icon>
+      <ion-icon onclick="sendMessages()" name="paper-plane-outline"></ion-icon>
     </footer>
 
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
