Log-in page implemented

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+    <div class="login-page">
+        <img src="assets/images/logo 2.png" alt="Seu navegador não pode carregar a imagem">
+        <input placeholder="Digite seu nome">
+        <button onclick="checkName()">Entrar</button>
+    </div>
     <header class="header">
       <img src="assets/images/logo 1.png" alt="Seu navegador não pode carregar a imagem">
       <ion-icon name="people"></ion-icon>
@@ -21,7 +26,6 @@
       <input class="input" placeholder="Escreva aqui..."/>
       <ion-icon onclick="sendMessages()" name="paper-plane-outline"></ion-icon>
     </footer>
-
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/scripts.js"></script>
