messages auto scrolling correctly

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
         <input placeholder="Digite seu nome">
         <button onclick="checkName()">Entrar</button>
     </div>
+
     <header class="header">
       <img src="assets/images/logo 1.png" alt="Seu navegador não pode carregar a imagem">
       <ion-icon name="people"></ion-icon>
     </header>
     <main class="main">
     </main>
+    <div class="scroll-devide"></div>
     <footer class="footer">
       <input class="input" placeholder="Escreva aqui..."/>
       <ion-icon onclick="sendMessages()" name="paper-plane-outline"></ion-icon>
