Sidebar + Private messages implemented

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+
     <div class="login-page">
         <img src="assets/images/logo 2.png" alt="Seu navegador não pode carregar a imagem">
         <input placeholder="Digite seu nome">
@@ -19,17 +20,65 @@
 
     <header class="header">
       <img src="assets/images/logo 1.png" alt="Seu navegador não pode carregar a imagem">
-      <ion-icon name="people"></ion-icon>
+      <ion-icon name="people" onclick="toggleSidebar()"></ion-icon>
     </header>
     <main class="main">
     </main>
     <div class="scroll-devide"></div>
     <footer class="footer">
-      <input class="input" placeholder="Escreva aqui..."/>
+      <div class="footer-left">
+        <input class="input" placeholder="Escreva aqui..."/>
+        <div class="who-is-listening">Enviando para Todos (público)</div>
+      </div>
       <ion-icon onclick="sendMessages()" name="paper-plane-outline"></ion-icon>
     </footer>
+
+    <div class="sidebar vanish">
+      <div class="fixed">
+        <div class="visibility-header">Escolha a visibilidade:</div>
+        <div class="public selected" onclick="selectPrivacy(this)">
+          <div class="left">
+            <ion-icon name="lock-open"></ion-icon>
+            &nbsp;Público
+          </div>
+          <img class= "check" src="assets/images/Vector.png">
+        </div>
+        <div class="private" onclick="selectPrivacy(this)">
+          <div class="left">
+            <ion-icon name="lock-closed"></ion-icon>
+            &nbsp;Reservadamente
+          </div>
+          <img class= "check" src="assets/images/Vector.png">
+        </div>
+        <div class="users-header">Escolha um contato para<br> enviar mensagem:</div>
+      </div>
+      <div class="users">
+        <div class="user">
+          <div class="left">
+            <ion-icon name="person-circle"></ion-icon>
+            &nbsp;
+            <div class="username">Todos</div>
+          </div>
+          <img class= "check" src="assets/images/Vector.png">
+        </div>
+      </div>
+    </div>
+    <div class="gray-background vanish" onclick="toggleSidebar()"></div>
+
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
+
+<!--
+  <ion-icon name="people">
+  <ion-icon name="lock-open"></ion-icon>
+  <ion-icon name="lock-closed"></ion-icon>
+  <ion-icon name="person-circle"></ion-icon>
+
+
+
+
+
+-->
