loading gif on login added

--- a/index.html
+++ b/index.html
@@ -1,74 +1,80 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <link rel="stylesheet" href="css/styles.css"/>
-    <link rel="stylesheet" href="css/reset.css"/>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>Bate-papo UOL</title>
-  </head>
+<head>
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/reset.css" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <body>
+  <title>Bate-papo UOL</title>
+</head>
 
-    <div class="login-page">
-        <img src="assets/images/logo 2.png" alt="Seu navegador não pode carregar a imagem">
-        <input placeholder="Digite seu nome">
-        <button onclick="checkName()">Entrar</button>
+<body>
+
+  <div class="login-page">
+    <img class="logo" src="assets/images/logo 2.png" alt="Seu navegador não pode carregar a imagem">
+    <input class="" placeholder="Digite seu nome">
+    <button class="" onclick="checkName()">Entrar</button>
+    <div class="loading vanish">
+      <img src="assets/gifs/pikachu.gif">
+      <div>Entrando...</div>
     </div>
+  </div>
 
-    <header class="header">
-      <img src="assets/images/logo 1.png" alt="Seu navegador não pode carregar a imagem">
-      <ion-icon name="people" onclick="toggleSidebar()"></ion-icon>
-    </header>
-    <main class="main">
-    </main>
-    <div class="scroll-devide"></div>
-    <footer class="footer">
-      <div class="footer-left">
-        <input class="input" placeholder="Escreva aqui..."/>
-        <div class="who-is-listening">Enviando para Todos (público)</div>
-      </div>
-      <ion-icon onclick="sendMessages()" name="paper-plane-outline"></ion-icon>
-    </footer>
+  <header class="header">
+    <img src="assets/images/logo 1.png" alt="Seu navegador não pode carregar a imagem">
+    <ion-icon name="people" onclick="toggleSidebar()"></ion-icon>
+  </header>
+  <main class="main">
+  </main>
+  <div class="scroll-devide"></div>
+  <footer class="footer">
+    <div class="footer-left">
+      <input class="input" placeholder="Escreva aqui..." />
+      <div class="who-is-listening">Enviando para Todos (público)</div>
+    </div>
+    <ion-icon onclick="sendMessages()" name="paper-plane-outline"></ion-icon>
+  </footer>
 
-    <div class="sidebar vanish">
-      <div class="fixed">
-        <div class="visibility-header">Escolha a visibilidade:</div>
-        <div class="public selected" onclick="selectPrivacy(this)">
-          <div class="left">
-            <ion-icon name="lock-open"></ion-icon>
-            &nbsp;Público
-          </div>
-          <img class= "check" src="assets/images/Vector.png">
+  <div class="sidebar vanish">
+    <div class="fixed">
+      <div class="visibility-header">Escolha a visibilidade:</div>
+      <div class="public selected" onclick="selectPrivacy(this)">
+        <div class="left">
+          <ion-icon name="lock-open"></ion-icon>
+          &nbsp;Público
         </div>
-        <div class="private" onclick="selectPrivacy(this)">
-          <div class="left">
-            <ion-icon name="lock-closed"></ion-icon>
-            &nbsp;Reservadamente
-          </div>
-          <img class= "check" src="assets/images/Vector.png">
-        </div>
-        <div class="users-header">Escolha um contato para<br> enviar mensagem:</div>
+        <img class="check" src="assets/images/Vector.png">
       </div>
-      <div class="users">
-        <div class="user">
-          <div class="left">
-            <ion-icon name="person-circle"></ion-icon>
-            &nbsp;
-            <div class="username">Todos</div>
-          </div>
-          <img class= "check" src="assets/images/Vector.png">
+      <div class="private" onclick="selectPrivacy(this)">
+        <div class="left">
+          <ion-icon name="lock-closed"></ion-icon>
+          &nbsp;Reservadamente
         </div>
+        <img class="check" src="assets/images/Vector.png">
+      </div>
+      <div class="users-header">Escolha um contato para<br> enviar mensagem:</div>
+    </div>
+    <div class="users">
+      <div class="user">
+        <div class="left">
+          <ion-icon name="person-circle"></ion-icon>
+          &nbsp;
+          <div class="username">Todos</div>
+        </div>
+        <img class="check" src="assets/images/Vector.png">
       </div>
     </div>
-    <div class="gray-background vanish" onclick="toggleSidebar()"></div>
+  </div>
+  <div class="gray-background vanish" onclick="toggleSidebar()"></div>
 
-    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="js/scripts.js"></script>
-  </body>
+  <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="js/scripts.js"></script>
+</body>
+
 </html>
 
 <!--
