now redirecting user to All if recipient is offline

--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
   </header>
   <main class="main">
   </main>
-  <div class="scroll-devide"></div>
   <footer class="footer">
     <div class="footer-left">
       <input class="input" placeholder="Escreva aqui..." />
       <div class="who-is-listening">Enviando para Todos (público)</div>
     </div>
-    <ion-icon onclick="sendMessages()" name="paper-plane-outline"></ion-icon>
+    <ion-icon onclick="checkIfRecipientIsOnline()" name="paper-plane-outline"></ion-icon>
   </footer>
 
   <div class="sidebar vanish">
