minor css changes

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <div class="footer-left">
       <input class="input" placeholder="Escreva aqui..." onfocus="this.placeholder = ''"
         onblur="this.placeholder = 'Escreva aqui...'" />
-      <div class="who-is-listening">Enviando para Todos (público)</div>
+      <div class="who-is-listening">Enviando para&nbsp;<div>Todos</div>&nbsp;(público)</div>
     </div>
     <ion-icon onclick="checkIfRecipientIsOnline()" name="paper-plane-outline"></ion-icon>
   </footer>
-  <div class="sidebar vanish">
+  <div class="sidebar">
     <div class="fixed">
       <div class="visibility-header">Escolha a visibilidade:</div>
       <div class="public selected" onclick="selectPrivacy(this)">
